force-app/main/default/objects/custom_create61__c/custom_create61__c.object-meta.xml
<CustomObject>
    <label>Custom created object61</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects61</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>