force-app/main/default/objects/custom_create61__c/fields/custom_create_61field521__c.field-meta.xml
<CustomField>
    <fullName>custom_create_61field521__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 61field521</label>
    <type>Checkbox</type>
</CustomField>