force-app/main/default/objects/custom_create61__c/fields/custom_create_61field548__c.field-meta.xml
<CustomField>
    <fullName>custom_create_61field548__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 61field548</label>
    <type>Checkbox</type>
</CustomField>